# falcon-mcp

./: .env.dev.example  .env.example  .gitignore  .goreleaser.yaml  .markdownlint.json  .pylintrc  ADVANCED_SEARCH_GUIDE.md  CHANGELOG.md  Dockerfile  Dockerfile.golang  Makefile  README.go.md  README.md  SEARCH_TOOL_SUMMARY.md  VULNERABILITY_SEARCH_ENHANCEMENT.md  VULNERABILITY_SEARCH_GUIDE.md  docker-compose.cloudflare.yml  gemini-extension.json  go.mod  go.sum  main.py  pyproject.toml  requirements.txt  server.json
.github/: CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml  config.yml  feature-request.yaml  question.yaml
.github/workflows/: docker-build-push.yml  docker-build-test.yml  docker-release.yml  docs-check.yml  docs-deploy.yml  go-ci.yml  markdown-lint.yml  pypi-publish.yml  python-lint.yml  python-test-e2e.yml  python-test.yml  release-please.yml  release.yml
adk_agent_falcon_mcp/: README.md  adk_agent_operations.sh
adk_agent_falcon_mcp/falcon_agent/: agent.py
cmd/falcon-mcp/: main.go
docs/: CONTRIBUTING.md  architecture_decisions.md  changelog.md  e2e_testing.md  module_development.md  overview.md  resource_development.md
docs-site/: package.json  pnpm-lock.yaml
docs/deployment/: Amazon Bedrock AgentCore.md  amazon_bedrock_agentcore.md  cloudflare_tunnel.md  google-cloud.md
docs/development/: contributing.md  docs-site.md  docs_site.md  integration-testing.md  integration_testing.md  module-development.md  module_development.md  resource-development.md  resource_development.md  rtr-admin-hardening-findings.md
docs/getting-started/: configuration.md  installation.md
docs/modules/: cases.md  cloud.md  correlationrules.md  custom-ioa.md  data-protection.md  detections.md  discover.md  exclusions.md  firewall.md  host-groups.md  hosts.md  idp.md  intel.md  ioc.md  ngsiem.md  overview.md  policies.md  quarantine.md  recon.md  rtr.md  scheduled-reports.md  sensor-usage.md  serverless.md  shield.md  spotlight.md
docs/modules-go/: cases.md  cloud.md  correlation_rules.md  custom_ioa.md  data_protection.md  detections.md  discover.md  exclusions.md  firewall.md  host_groups.md  hosts.md  idp.md  intel.md  ioc.md  ngsiem.md  policies.md  quarantine.md  recon.md  rtr.md  scheduled_reports.md  sensor_usage.md  serverless.md  shield.md  spotlight.md
docs/usage/: cli.md  dynamic-mode.md  editor-integration.md
examples/: basic_usage.py  sse_usage.py  streamable_http_usage.py
examples/adk/: README.md  adk_agent_operations.sh
falcon_mcp/: client.py  dynamic.py  filter_hints.py  registry.py  server.py
falcon_mcp/common/: api_scopes.py  auth.py  constants.py  errors.py  field_presets.py  utils.py
falcon_mcp/modules/: __init__.py  base.py  cases.py  cloud.py  correlation_rules.py  custom_ioa.py  data_protection.py  detections.py  discover.py  dlp.py  exclusions.py  firewall.py  host_groups.py  hosts.py  idp.py  incidents.py  intel.py  ioc.py  ngsiem.py  ods.py  policies.py  quarantine.py  recon.py  rtr.py  rtr_admin.py  sample_uploads.py  sandbox.py  scheduled_reports.py  sensor_usage.py  serverless.py  shield.py  spotlight.py  triage.py
falcon_mcp/resources/: cloud.py  correlation_rules.py  data_protection.py  detections.py  discover.py  dlp.py  exclusions.py  fql.py  hosts.py  intel.py  ngsiem.py  quarantine.py  recon.py  rtr.py  rtr_admin.py  sensor_usage.py  serverless.py  shield.py  spotlight.py
go/: go.mod  go.sum
internal/cli/: root.go  root_test.go  serve.go  serve_test.go
internal/config/: config.go  config_test.go
internal/dotenv/: dotenv.go
internal/falcon/: accessors.go  accessors_tier3.go  accessors_tier4.go  client.go  client_test.go  download.go  errors.go  errors_test.go  factory.go  pool.go  pool_test.go  response.go  scopes.go
internal/fql/: guides.go  hints.go  resource.go  suffix.go
internal/logging/: logging.go
internal/mcpserver/: catalog.go  conformance_test.go  dynamic.go  dynamic_mode_test.go  dynamic_test.go  factories_gen.go  factories_test.go  gen.go  searchcorpus.go  server.go  server_test.go
internal/parity/: parity.go
npm/falcon-mcp/: .gitignore  README.md  package.json  package.json.tmpl
pkg/http/: http.go  (+4 more)
plans/: README.md
python/: README.md  pyproject.toml
python/falcon_mcp/: __init__.py  __main__.py  falcon_mcp.py
python/falcon_mcp_go/: __init__.py  launcher.py
python/tests/: test_download.py  test_execute.py  test_platform.py
scripts/: build_docs.sh  gen_docs.go  generate_e2e_report.py  generate_module_docs.py  scope_preflight_cloud_risks.py
src/: __init__.py  client.py  registry.py  server.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_field_filtering.py  test_field_presets.py  test_format_response.py  test_hello.py  test_mcp_compliance.py  test_registry.py  test_server.py  test_streamable_http_transport.py  test_tools_list_output_schema.py  test_triage.py
(+296 files in other folders)
